--- a/src/TimeTracker.Domain/TimeTracker.Domain.csproj
+++ b/src/TimeTracker.Domain/TimeTracker.Domain.csproj
@@ -6,5 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0" />
+    <PackageReference Include="OpenIdDict" Version="2.0.0-*" />
+    <PackageReference Include="OpenIdDict.EntityFrameworkCore" Version="2.0.0-*" />
   </ItemGroup>
 </Project>
