--- a/src/TimeTracker.Web/package.json
+++ b/src/TimeTracker.Web/package.json
@@ -15,6 +15,9 @@
     "@angular/platform-browser-dynamic": "^4.3.4",
     "@angular/platform-server": "^4.3.4",
     "@angular/router": "^4.3.4",
+    "@ngrx/effects": "^4.0.3",
+    "@ngrx/store": "^4.0.3",
+    "@ngrx/store-devtools": "^4.0.0",
     "@ngtools/webpack": "1.6.0",
     "@types/webpack-env": "1.13.0",
     "angular-auth-oidc-client": "1.3.7",
